# fastapi-otlp

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 0c1e5320d777_create_tables.py
src/uv_example/: main.py  opentelemetry.py
