[project]
name = "fastapi-otlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.43",
    "sample==0.1.0",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.1",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.36.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.58b0",
    "fastapi>=0.116.2",
    "uvicorn[standard]>=0.36.0",
    "sqlmodel>=0.0.25",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "opentelemetry-instrumentation-psycopg2>=0.58b0",
]

[dependency-groups]
test = [
    "pytest>=8.4.2",
    "factory-boy>=3.3.3",
]

lint = [
    "ruff>=0.13.1",
]

type = [
    { include-group = "test" },
    "mypy>=1.18.2",
]

dev = [
    { include-group = "lint" },
    { include-group = "type" },
    "alembic>=1.16.5",
    "pre-commit>=4.3.0",
]

[tool.uv.sources]
sample = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -s"
testpaths = [
    "**/tests",
    "**/integration",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "N",
    "UP",
    "B"
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["format", "type", "3.13"]

[tool.tox.env.format]
runner = "uv-venv-lock-runner"
dependency_groups = ["lint"]
commands = [["ruff", "format", "."], ["ruff", "check", "--fix", "."]]

[tool.tox.env.format-check]
runner = "uv-venv-lock-runner"
dependency_groups = ["lint"]
commands = [["ruff", "format", "--check", "."], ["ruff", "check", "."]]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
dependency_groups = ["test"]
commands = [["pytest"]]

[tool.tox.env.type]
runner = "uv-venv-lock-runner"
dependency_groups = ["type"]
commands = [
    ["mypy", "src/"],
    ["mypy", "tests/"],
    ["mypy", "packages/sample/src"],
    ["mypy", "packages/sample/tests"]
]
